avicii: Setup udfps overlays
 * fod radius = radius value / 2
 * fod x position = x position value + (radius value / 2)
 * fod y position = y position value + (radius value / 2)
 * fod enroll progress radius = (radius value / 2) + 5

Change-Id: I336997c6707523780505a1284e57ca081f84bd0a
Signed-off-by: firebird11 <hbgassel@gmail.com>

--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -28,4 +28,7 @@
 
     <!--  Allow CornerHandleView and PathSpecCornerPathRenderer to decouple from corner-radius -->
     <dimen name="config_rounded_mask_size">118px</dimen>
+
+    <!-- The Enrollment Progress bar for UDFPS sensor in pixels -->
+    <integer name="config_udfpsEnrollProgressBar" translatable="false">109</integer>
 </resources>
